Bug 1508441 part 1: Adjust button reflow to suppress baseline for contain:layout, instead of for contain:size. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D28909